Убрал лишнии плагины